--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -3,6 +3,11 @@
     padding-left: 10px;
 }
 
+.profile-details {
+   
+    padding-left: 30px;
+}
+
 .details {
     background-color: aliceblue;
     height: 70px;
@@ -36,6 +41,14 @@
     border-radius: 50%;
 }
 
+.exercise-time {
+    padding-left: 20px;
+}
+
+.totalsec {
+    padding-left: 100px;
+}
+
 .activity-btn {
     background-color: blue;
     width: 100%;
@@ -43,4 +56,8 @@
     border-radius: 10px;
     color: white;
     margin-top: 20px;
+}
+
+.activity-btn:hover {
+    background-color: orange;
 }
