--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -25,6 +25,18 @@
     margin-right: 20px;
 }
 
+.btn-list {
+    background-color: blue;
+    width: 90%;
+    height: 50px;
+    border-radius: 10px;
+    color: white;
+}
+
+.btn-list:hover {
+    background-color: orange;
+}
+
 @media screen and (max-width: 960px) {
     .item {
         grid-template-columns: repeat(1, 1fr);
