--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,17 +1,26 @@
 .item-container {
-    border: 2px solid blueviolet;
-    border-radius: 5px;
-    height: 430px;
+    border: 2px solid azure;
+    border-radius: 10px;
 }
 
 .item-container img {
-    width: 90%;
+    width: 100%;
     height: 250px;
-    border-radius: 10px;
-    padding-top: 10px;
-    padding-left: 20px;
+   
 }
 
 .item-info {
     padding-left: 20px;
+}
+
+.btn-list {
+    background-color: blue;
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    color: white;
+}
+
+.btn-list:hover {
+    background-color: orange;
 }
