--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -25,8 +25,20 @@
     margin-right: 20px;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 576px) {
+    .items-container{
+        grid-template-columns: 1fr;
+    }
     .item {
         grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (min-width: 577px) and (max-width: 992px) {
+    .items-container{
+        grid-template-columns: 1fr;
+    }
+    .item {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
