--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -11,10 +11,12 @@
 
 .details {
     background-color: aliceblue;
-    height: 70px;
+    height: 80px;
     border-radius: 10px;
+}
+
+.weight-height {
     display: flex;
-    margin-top: 20px;
 }
 
 .add-break {
@@ -25,6 +27,10 @@
     border-radius: 10px;
     margin-top: 10px;
     margin-left: 15px;
+}
+
+.container {
+    margin-top: 80px;
 }
 
 .add-break:hover {
@@ -44,6 +50,7 @@
 
 .exercise-time {
     padding-left: 20px;
+    padding-top: 30px;
 }
 
 .totalsec {
@@ -53,7 +60,7 @@
 .activity-btn {
     background-color: blue;
     width: 100%;
-    height: 50px;
+    height: 60px;
     border-radius: 10px;
     color: white;
     margin-top: 20px;
@@ -61,4 +68,8 @@
 
 .activity-btn:hover {
     background-color: orange;
+}
+
+.active-name {
+    font-size: 20px;
 }
